syntax = "proto3";

package go.micro.service.VideoService;
option go_package = "proto/VideoService";

service VideoService {
  rpc PublishAction(douyin_publish_action_request) returns (douyin_publish_action_response){}
  rpc Feed(douyin_feed_request) returns (douyin_feed_response){}
  rpc PublishList(douyin_publish_list_request) returns (douyin_publish_list_response){}
  rpc FavoriteAction(douyin_favorite_action_request) returns (douyin_favorite_action_response){}
  rpc FavoriteList(douyin_favorite_list_request) returns (douyin_favorite_list_response){}
  rpc CommentAction(douyin_comment_action_request) returns (douyin_comment_action_response){}
  rpc CommentList(douyin_comment_list_request) returns (douyin_comment_list_response){}
}

message douyin_publish_action_request{
  string token = 1;//用户鉴权token
  bytes data = 2;//视颇陵数据
  string title = 3;
}


message douyin_publish_action_response{
  int32 status_code = 1;//状态码，0-成功，其他值-失败
  string status_msg = 2;//返回状态描述
}

message douyin_feed_request{
  int64 latest_time = 1;//可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填

}

message douyin_feed_response{
  int32 status_code = 1;//状态码，0-成功，其他值-失败
  string status_msg = 2;//返回状态描述
  repeated video video_list = 3;//视缬列表
  int64 next_time = 4;//本次返回的视颜中，发布最早的时间，作为下次请求时的机ates
}

message douyin_publish_list_request{
  int64 user_id = 1;//用户id
  string token = 2;//用户鉴权token
}

message douyin_publish_list_response{
  int32 status_code = 1;//状态码，0-成功，其他值-失败
  string status_msg = 2;//返▣状态描述
  repeated video video_list = 3;//用户发布的视颁列表
}

message douyin_favorite_action_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
  int64 video_id = 3; // 视频id
  int32 action_type = 4; // 1-点赞，2-取消点赞
}

message douyin_favorite_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

message douyin_favorite_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message douyin_favorite_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated video video_list = 3; // 用户点赞视频列表
}

message douyin_comment_action_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
  int64 video_id = 3; // 视频id
  int32 action_type = 4; // 1-发布评论，2-删除评论
  string comment_text = 5; // 用户填写的评论内容，在action_type=1的时候使用
  int64 comment_id = 6; // 要删除的评论id，在action_type=2的时候使用
}

message douyin_comment_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  Comment comment = 3; // 评论成功返回评论内容，不需要重新拉取整个列表
}

message douyin_comment_list_request {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
}

message douyin_comment_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Comment comment_list = 3; // 评论列表
}

message Comment {
  int64 id = 1; // 视频评论id
  User user = 2; // 评论用户信息
  string content = 3; // 评论内容
  string create_date = 4; // 评论发布日期，格式 mm-dd
}



message video{
  int64 id = 1;//视颇唯一标识
  User author = 2;//视频作者信息
  string play_url = 3;//视频播放地址
  string cover_url = 4;//视频封面地址
  int64 favorite_count = 5;//视频的点赞总数
  int64 comment_count = 6;//视颇的评论总数
  bool is_favorite = 7;//true-已点攒，false-末点攒
  string title = 8;
}

message User{
  int64 id = 1;//用户id
  string name = 2;//用户名称
  int64 fol1ow_count = 3;//关注总数
  int64 follower_count = 4;//粉丝总数
  bool is_follow = 5;//true-已关注，false-末关注
}
